# bda-2026-01

./: .dockerignore  .gitignore  AGENTS.md  README.md  app_reco.py  app_recsys_user_simulator.py  app_week6_qual_eval.py  build_chalna_dashboard.py  docker-compose.yml  pyproject.toml  restructure_chalna_dashboard.py  update_dau_card.py
dags/: gharchive_dbt_metrics.py  gharchive_platform_metrics.py  gharchive_recsys_features.py
docs/: analytics_engineer.html  analytics_engineer.md  bigquery_dbt_analysis_workflow.md  data_platform_local.md  data_platform_three_shapes.html  dbt_gharchive_structure.html  dbt_mart_landscape.html  drift_input_feature_design.md  mlflow_recsys_tracking.html  mlflow_recsys_tracking.md  recsys_api_architecture.html  recsys_mlops_api_design.md  recsys_model_development_process.html  recsys_repo2repo_week9_plan.md  recsys_retrieval_rerank_redesign.md  recsys_service_architecture.html  recsys_split_visual.html  recsys_v2_rerank_handoff.md  recsys_vercel_local_backend.md  repo2repo_related_structure_20260530.html  week10_midterm_recap.html  week10_recsys_ml_review.html  week10_recsys_ml_review_content.md  week6_checkpoint_and_week7_plan.md  week6_neural_ranker_cache_plan.md  week6_neural_ranker_run_log.md  week6_recsys_experiment_plan.md  week6_recsys_handoff.md  week7_data_architecture.html  week7_deep_models_visual.html  week7_mlflow_onboarding.html  week7_recsys_deep_models.md  week8_au_decline_report.html  week9_analytics_engineering.html  week9_analytics_engineering_content.md
reports/: 20260712_dau_decline_process_walkthrough.html  (+12 more)
(+161 files in other folders)
