[project]
name = "bda-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "db-dtypes>=1.4.4",
    "duckdb>=1.5.2",
    "faiss-cpu>=1.13.2",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-bigquery-storage>=2.36.2",
    "implicit>=0.7.2",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.12.0",
    "nbconvert>=7.17.0",
    "pandas>=2.2,<3",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gharchive", "src/ghrec"]
